# distributed_computing_lab_1

./: README.md  mandel.c  my_pth_ll_rwl.c  pi.c  point.h  rwlock.c  rwlock.h
include/: CMakeLists.txt  point.h
src/: mandel.c  rwlock.c
